removed solutions and final exam

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+Readme.txt
+
+# Solutions
+*soln.html
+exam-final*
+ashley_miller_666*
+hw0*
+
+# excel files
+*.xls
+*.xlx
+
 # History files
 .Rhistory
 .Rapp.history
